# Fyp-sentiment-analyser

./: .gitignore  Fyp-sentiment-analyser.code-workspace  best_hybrid_model.pt  guide_for_beginners.md  label_mapping.json  last_epoch_checkpoint.pt  main.py  package-lock.json  project-brain-master-prompt (1).md  project_architecture_and_plan.md  project_documentation.md  project_status_and_workflow.md  pyproject.toml  requirements.txt  setup_report.md
notebooks/: model_training.ipynb
project-brain/graph/: graph.json
project-brain/memory/: architecture.md  data.md  dependencies.md  hybrid_model.md  lexicon.md  overview.md  patterns.md  rag.md  roberta.md  webapp.md
project-brain/reviews/: code-quality.md
project-brain/standards/: general.md
project-brain/system/: planner.md  system.md  workflow.md
project-brain/tasks/: active.md  changelog.md  completed.md
src/: __init__.py  app.py  data_collection.py  data_preprocessing.py  hybrid_model.py  inference.py  lexicon_feature_extraction.py  model_evaluation.py  prepare_dataset.py  rag_system.py  roberta_finetuning.py  verify_config.py
src/routes/: analyze.py  views.py
static/css/: style.css
static/js/: analyze.js
templates/: base.html  index.html  results.html
