[project]
name = "fyp-sentiment-analyser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "nrclex>=4.1.0",
    "pandas>=3.0.3",
    "praw>=8.0.2",
    "scikit-learn>=1.9.0",
    "textblob>=0.20.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "tweepy>=4.16.0",
]
